Updated Slovenian translation
svn path=/trunk/; revision=2998

--- a/po/sl.po
+++ b/po/sl.po
@@ -1,19 +1,19 @@
 # Copyright (C) 2005-2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the program package.
 #
-# Slovenian maintainer: Matej Urbančič <matej.urban@gmail.com>.
+# Slovenian maintainer: Matej Urbančič <mateju@svn.gnome.org>.
 #
 # Translators:
 # Andraz Tori <andraz.tori1@guest.arnes.si>, 2002.
-# Matej Urbančič <matej.urban@gmail.com>, 2006 - 2007.
+# Matej Urbančič <mateju@svn.gnome.org>, 2006 - 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-15 14:51+0100\n"
-"PO-Revision-Date: 2007-10-18 13:12+0100\n"
-"Last-Translator: Matej Urbančič <matej.urban@gmail.com>\n"
+"PO-Revision-Date: 2007-12-05 16:24+0100\n"
+"Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,6 +48,7 @@ msgid "Curses Functions"
 msgstr "Curses funkcije"
 
 #: ../data/man.xml.in.h:5
+#: ../data/toc.xml.in.h:36
 msgid "Development"
 msgstr "Razvoj"
 
@@ -56,7 +57,7 @@ msgid "FORTRAN Functions"
 msgstr "FORTRAN Funkcije"
 
 #: ../data/man.xml.in.h:7
-#: ../data/toc.xml.in.h:15
+#: ../data/toc.xml.in.h:56
 msgid "Games"
 msgstr "Igre"
 
@@ -289,136 +290,582 @@ msgid "X11 Overviews"
 msgstr "X11 pogledi"
 
 #: ../data/toc.xml.in.h:1
+msgid "2DGraphics"
+msgstr "2DGrafika"
+
+#: ../data/toc.xml.in.h:2
+msgid "3DGraphics"
+msgstr "3DGrafika"
+
+#: ../data/toc.xml.in.h:3
 msgid "Accessibility"
 msgstr "Dostopnost"
 
-#: ../data/toc.xml.in.h:2
-msgid "Accessories"
-msgstr "Dodatki"
-
-#: ../data/toc.xml.in.h:3
-msgid "Applications for fun"
-msgstr "Zabavni programi"
-
 #: ../data/toc.xml.in.h:4
-msgid "Applications for manipulating or viewing graphics"
-msgstr "Programi za obdelavo in pregledovanje slik"
+msgid "Action Games"
+msgstr "Akcijske igre"
 
 #: ../data/toc.xml.in.h:5
-msgid "Applications for word processing and other office tasks"
-msgstr "Programi za delo z besedili in ostale pisarniške naloge"
+msgid "Adventure Games"
+msgstr "Igre avanture"
 
 #: ../data/toc.xml.in.h:6
-msgid "Applications related to X Windows"
-msgstr "Programi povezani z X okoljem"
+msgid "Amusement"
+msgstr "Zabava"
 
 #: ../data/toc.xml.in.h:7
-msgid "Applications related to multimedia"
-msgstr "Programi povezani z večpredstavnostjo"
+msgid "Applications for viewing and manipulating graphics"
+msgstr "Programi za obdelavo in pregledovanje slik"
 
 #: ../data/toc.xml.in.h:8
-msgid "Applications related to software development"
-msgstr "Programi za programiranje"
+msgid "Applications related to audio and video"
+msgstr "Programi povezani z zvokom in sliko"
 
 #: ../data/toc.xml.in.h:9
-msgid "Applications related to the internet"
-msgstr "Programi povezani z internetom"
+msgid "Applications that teach or aid in learning"
+msgstr "Programi povezani z učenjem"
 
 #: ../data/toc.xml.in.h:10
-msgid "Applications specific to the panel"
-msgstr "Programi privzeti za orodno vrstico"
+msgid "Arcade Games"
+msgstr "Arkadne igre"
 
 #: ../data/toc.xml.in.h:11
-msgid "Applications that support assistive technologies"
-msgstr "Programi, ki podpirajo pomožne tehnologije"
+msgid "Archiving"
+msgstr "Arhiviranje"
 
 #: ../data/toc.xml.in.h:12
+msgid "Art"
+msgstr "Umetnost"
+
+#: ../data/toc.xml.in.h:13
+msgid "ArtificialIntelligence"
+msgstr "Umetna Inteligenca"
+
+#: ../data/toc.xml.in.h:14
+msgid "Astronomy"
+msgstr "Astronomija"
+
+#: ../data/toc.xml.in.h:15
+msgid "AudioVideoEditing"
+msgstr "Urejanje zvoka in slike"
+
+#: ../data/toc.xml.in.h:16
+msgid "Biology"
+msgstr "Biologija"
+
+#: ../data/toc.xml.in.h:17
+msgid "Blocks Games"
+msgstr ""
+
+#: ../data/toc.xml.in.h:18
+msgid "Board Games"
+msgstr "Tabelne Igre"
+
+#: ../data/toc.xml.in.h:19
+msgid "Building"
+msgstr "Gredbeništvo"
+
+#: ../data/toc.xml.in.h:20
+msgid "Calculator"
+msgstr "Kalkulator"
+
+#: ../data/toc.xml.in.h:21
+msgid "Calendar"
+msgstr "Koledar"
+
+#: ../data/toc.xml.in.h:22
+msgid "Card Games"
+msgstr "Igre s kartami"
+
+#: ../data/toc.xml.in.h:23
+msgid "Chart"
+msgstr "Graf"
+
+#: ../data/toc.xml.in.h:24
+msgid "Chat"
+msgstr "Klepet"
+
+#: ../data/toc.xml.in.h:25
+msgid "Chemistry"
+msgstr "Kemija"
+
+#: ../data/toc.xml.in.h:26
+msgid "Clock"
+msgstr "Ura"
+
+#: ../data/toc.xml.in.h:27
+msgid "Compression"
+msgstr "Krčenje"
+
+#: ../data/toc.xml.in.h:28
+msgid "ComputerScience"
+msgstr "Računalništvo"
+
+#: ../data/toc.xml.in.h:29
+msgid "Construction"
+msgstr "Gradbeništvo"
+
+#: ../data/toc.xml.in.h:30
+msgid "ContactManagement"
+msgstr "Upravljanje z stiki"
+
+#: ../data/toc.xml.in.h:31
+msgid "DataVisualization"
+msgstr "Vizualizacija podatkov"
+
+#: ../data/toc.xml.in.h:32
+msgid "Database"
+msgstr "Zbirka podatkov"
+
+#: ../data/toc.xml.in.h:33
+msgid "Debugger"
+msgstr "Razhroščevanje"
+
+#: ../data/toc.xml.in.h:34
 msgid "Desktop"
 msgstr "Namizje"
 
-#: ../data/toc.xml.in.h:13
-msgid "Documents specific to the KDE Desktop Environment"
-msgstr "Dokumenti privzeti za KDE namizno okolje"
+#: ../data/toc.xml.in.h:35
+msgid "DesktopSettings"
+msgstr "Nastavitve namizja"
 
-#: ../data/toc.xml.in.h:14
+#: ../data/toc.xml.in.h:37
+msgid "Dialup"
+msgstr ""
+
+#: ../data/toc.xml.in.h:38
+msgid "Dictionary"
+msgstr "Slovar"
+
+#: ../data/toc.xml.in.h:39
+msgid "DiscBurning"
+msgstr "Peka zgoščenk"
+
+#: ../data/toc.xml.in.h:40
+msgid "Economy"
+msgstr "Ekonomija"
+
+#: ../data/toc.xml.in.h:41
 msgid "Education"
 msgstr "Izobraževanje"
 
-#: ../data/toc.xml.in.h:16
+#: ../data/toc.xml.in.h:42
+msgid "Electricity"
+msgstr "Elektrika"
+
+#: ../data/toc.xml.in.h:43
+msgid "Electronics"
+msgstr "Elektronika"
+
+#: ../data/toc.xml.in.h:44
+msgid "Email"
+msgstr "E-pošta"
+
+#: ../data/toc.xml.in.h:45
+msgid "Emulator"
+msgstr "Emulator"
+
+#: ../data/toc.xml.in.h:46
+msgid "Engineering"
+msgstr "Inženiring"
+
+#: ../data/toc.xml.in.h:47
+msgid "FileManager"
+msgstr "Urejevalnik datotek"
+
+#: ../data/toc.xml.in.h:48
+msgid "FileTools"
+msgstr "Datotečna orodja"
+
+#: ../data/toc.xml.in.h:49
+msgid "FileTransfer"
+msgstr "Prenos datotek"
+
+#: ../data/toc.xml.in.h:50
+msgid "Filesystem"
+msgstr "Datotečni sistem"
+
+#: ../data/toc.xml.in.h:51
+msgid "Finance"
+msgstr "Finance"
+
+#: ../data/toc.xml.in.h:52
+msgid "FlowChart"
+msgstr "Preglednice"
+
+#: ../data/toc.xml.in.h:53
+msgid "GNOME Applications"
+msgstr "GNOME programi"
+
+#: ../data/toc.xml.in.h:54
+msgid "GTK"
+msgstr "GTK"
+
+#: ../data/toc.xml.in.h:55
+msgid "GUIDesigner"
+msgstr "GUIDesigner"
+
+#: ../data/toc.xml.in.h:57
+msgid "Generic applications for the GNOME environment"
+msgstr ""
+
+#: ../data/toc.xml.in.h:58
+msgid "Generic applications for the KDE environment"
+msgstr "Programi privzeti za namizje KDE"
+
+#: ../data/toc.xml.in.h:59
+msgid "Geography"
+msgstr "Geografija"
+
+#: ../data/toc.xml.in.h:60
+msgid "Geology"
+msgstr "Geologija"
+
+#: ../data/toc.xml.in.h:61
+msgid "Geoscience"
+msgstr "Geološke znanosti"
+
+#: ../data/toc.xml.in.h:62
 msgid "Graphics"
 msgstr "Grafika"
 
-#: ../data/toc.xml.in.h:17
+#: ../data/toc.xml.in.h:63
+msgid "Guides and manuals for applications that connect to the outside world"
+msgstr ""
+
+#: ../data/toc.xml.in.h:64
+msgid "Guides for getting involved in development"
+msgstr ""
+
+#: ../data/toc.xml.in.h:65
+msgid "HamRadio"
+msgstr ""
+
+#: ../data/toc.xml.in.h:66
+msgid "HardwareSettings"
+msgstr "StrojneNastavitve"
+
+#: ../data/toc.xml.in.h:67
+msgid "Have some fun"
+msgstr "Zabava in sprostitev"
+
+#: ../data/toc.xml.in.h:68
+msgid "History"
+msgstr "Zgodovina"
+
+#: ../data/toc.xml.in.h:69
+msgid "IDE"
+msgstr "IDE"
+
+#: ../data/toc.xml.in.h:70
+msgid "IRCClient"
+msgstr "IRC Odjemalec"
+
+#: ../data/toc.xml.in.h:71
+msgid "ImageProcessing"
+msgstr "Obdelava slik"
+
+#: ../data/toc.xml.in.h:72
+msgid "InstantMessaging"
+msgstr "Trenutno sporočanje"
+
+#: ../data/toc.xml.in.h:73
 msgid "Internet"
 msgstr "Internet"
 
-#: ../data/toc.xml.in.h:18
-msgid "KDE"
-msgstr "KDE"
+#: ../data/toc.xml.in.h:74
+msgid "Java"
+msgstr "Java"
 
-#: ../data/toc.xml.in.h:19
-msgid "Learning applications"
-msgstr "Programi za učenje"
+#: ../data/toc.xml.in.h:75
+msgid "KDE Applications"
+msgstr "KDE programi"
 
-#: ../data/toc.xml.in.h:20
-msgid "Miscellaneous documents"
+#: ../data/toc.xml.in.h:76
+msgid "Kids Games"
+msgstr "Otroške igre"
+
+#: ../data/toc.xml.in.h:77
+msgid "Learn more about making you're system more accessible for a range of disabilities"
+msgstr ""
+
+#: ../data/toc.xml.in.h:78
+msgid "Licences"
+msgstr "Licence"
+
+#: ../data/toc.xml.in.h:79
+msgid "Literature"
+msgstr "Literatura"
+
+#: ../data/toc.xml.in.h:80
+msgid "Logic Games"
+msgstr "Logične igre"
+
+#: ../data/toc.xml.in.h:81
+msgid "Math"
+msgstr "Matematika"
+
+#: ../data/toc.xml.in.h:82
+msgid "MedicalSoftware"
+msgstr "Medicina"
+
+#: ../data/toc.xml.in.h:83
+msgid "Midi"
+msgstr "Midi"
+
+#: ../data/toc.xml.in.h:84
+msgid "Miscellaneous Documentation"
 msgstr "Različni dokumenti"
 
-#: ../data/toc.xml.in.h:21
-msgid "Office"
-msgstr "Pisarna"
+#: ../data/toc.xml.in.h:85
+msgid "Mixer"
+msgstr "Mešalo"
 
-#: ../data/toc.xml.in.h:22
-msgid "Other Applications"
-msgstr "Dodatni programi"
+#: ../data/toc.xml.in.h:86
+msgid "Monitor"
+msgstr "Nadzorovanje"
 
-#: ../data/toc.xml.in.h:23
+#: ../data/toc.xml.in.h:87
+msgid "Motif"
+msgstr "Motif"
+
+#: ../data/toc.xml.in.h:88
+msgid "Music"
+msgstr "Glasba"
+
+#: ../data/toc.xml.in.h:89
+msgid "News"
+msgstr "Novice"
+
+#: ../data/toc.xml.in.h:90
+msgid "NumericalAnalysis"
+msgstr "Številčne analize"
+
+#: ../data/toc.xml.in.h:91
+msgid "OCR"
+msgstr "OCR"
+
+#: ../data/toc.xml.in.h:92
+msgid "Office Applications"
+msgstr "Pisarniški programi"
+
+#: ../data/toc.xml.in.h:93
+msgid "Office applications"
+msgstr "Pisarniški programi"
+
+#: ../data/toc.xml.in.h:94
 msgid "Other Documentation"
 msgstr "Dodatna dokumentacija"
 
-#: ../data/toc.xml.in.h:24
-msgid "Panel Applets"
-msgstr "Programi namizja"
+#: ../data/toc.xml.in.h:95
+msgid "P2P"
+msgstr "P2P"
 
-#: ../data/toc.xml.in.h:25
-msgid "Programming"
-msgstr "Programiranje"
+#: ../data/toc.xml.in.h:96
+msgid "PDA"
+msgstr "PDA"
 
-#: ../data/toc.xml.in.h:26
-msgid "Scientific"
-msgstr "Znanstveni"
+#: ../data/toc.xml.in.h:97
+msgid "PackageManager"
+msgstr "Upravljalnik paketov"
 
-#: ../data/toc.xml.in.h:27
-msgid "Scientific Applications."
-msgstr "Znanstveni programi"
+#: ../data/toc.xml.in.h:98
+msgid "ParallelComputing"
+msgstr ""
 
-#: ../data/toc.xml.in.h:28
+#: ../data/toc.xml.in.h:99
+msgid "Photography"
+msgstr "Fotografija"
+
+#: ../data/toc.xml.in.h:100
+msgid "Physics"
+msgstr "Fizika"
+
+#: ../data/toc.xml.in.h:101
+msgid "Player"
+msgstr "Predvajalnik"
+
+#: ../data/toc.xml.in.h:102
+msgid "Presentation"
+msgstr "Predstavitev"
+
+#: ../data/toc.xml.in.h:103
+#: ../src/yelp-print.c:337
+#: ../src/yelp-print.c:364
+msgid "Printing"
+msgstr "Tiskanje"
+
+#: ../data/toc.xml.in.h:104
+msgid "Profiling"
+msgstr "Profiliranje"
+
+#: ../data/toc.xml.in.h:105
+msgid "ProjectManagement"
+msgstr "Upravljanje projektov"
+
+#: ../data/toc.xml.in.h:106
+msgid "Publishing"
+msgstr "Objavljanje"
+
+#: ../data/toc.xml.in.h:107
+msgid "Qt"
+msgstr "Qt"
+
+#: ../data/toc.xml.in.h:108
+msgid "RasterGraphics"
+msgstr "RasterskaGrafika"
+
+#: ../data/toc.xml.in.h:109
+msgid "Recorder"
+msgstr "Snemanje"
+
+#: ../data/toc.xml.in.h:110
+msgid "RemoteAccess"
+msgstr "Oddaljeni dostop"
+
+#: ../data/toc.xml.in.h:111
+msgid "RevisionControl"
+msgstr ""
+
+#: ../data/toc.xml.in.h:112
+msgid "Robotics"
+msgstr "Robotika"
+
+#: ../data/toc.xml.in.h:113
+msgid "Role Playing Games"
+msgstr "Igre igranja vlog"
+
+#: ../data/toc.xml.in.h:114
+msgid "Scanning"
+msgstr "Skeniranje"
+
+#: ../data/toc.xml.in.h:115
+msgid "Science"
+msgstr "Znanost"
+
+#: ../data/toc.xml.in.h:116
+msgid "Security"
+msgstr "Varnost"
+
+#: ../data/toc.xml.in.h:117
+msgid "Sequencer"
+msgstr ""
+
+#: ../data/toc.xml.in.h:118
+msgid "Settings"
+msgstr "Nastavitve"
+
+#: ../data/toc.xml.in.h:119
+msgid "Settings users can manipulate to make their environment more pleasent"
+msgstr "Nastavitve s katerimi si okolje prilagaja uporabnik"
+
+#: ../data/toc.xml.in.h:120
+msgid "Simulation Games"
+msgstr "Simulacijske igre"
+
+#: ../data/toc.xml.in.h:121
+msgid "Sound"
+msgstr "Zvok"
+
+#: ../data/toc.xml.in.h:122
 msgid "Sound &amp; Video"
 msgstr "Zvok in video"
 
-#: ../data/toc.xml.in.h:29
-msgid "System Tools"
-msgstr "Sistemska orodja"
+#: ../data/toc.xml.in.h:123
+msgid "Sports"
+msgstr "Šport"
 
-#: ../data/toc.xml.in.h:30
-msgid "Utilities to manage your computer"
+#: ../data/toc.xml.in.h:124
+msgid "Sports Games"
+msgstr "Športne igre"
+
+#: ../data/toc.xml.in.h:125
+msgid "Spreadsheet"
+msgstr "Preglednica"
+
+#: ../data/toc.xml.in.h:126
+msgid "Strategy Games"
+msgstr "Strateške igre"
+
+#: ../data/toc.xml.in.h:127
+msgid "System"
+msgstr "Sistem"
+
+#: ../data/toc.xml.in.h:128
+msgid "TV"
+msgstr "TV"
+
+#: ../data/toc.xml.in.h:129
+msgid "Telephony"
+msgstr "Telefonija"
+
+#: ../data/toc.xml.in.h:130
+msgid "TelephonyTools"
+msgstr "Orodja telefonije"
+
+#: ../data/toc.xml.in.h:131
+msgid "TerminalEmulator"
+msgstr "Konzola"
+
+#: ../data/toc.xml.in.h:132
+msgid "Text Tools"
+msgstr "Besedilna orodja"
+
+#: ../data/toc.xml.in.h:133
+msgid "TextEditor"
+msgstr "Urejevalnik besedila"
+
+#: ../data/toc.xml.in.h:134
+msgid "Tools to help you manage you're computer"
 msgstr "Pripomočki za upravljanje z računalnikom"
 
-#: ../data/toc.xml.in.h:31
-msgid "Utility applications"
+#: ../data/toc.xml.in.h:135
+msgid "Translation"
+msgstr "Prevajanje"
+
+#: ../data/toc.xml.in.h:136
+msgid "Tuner"
+msgstr "Uravnavanje"
+
+#: ../data/toc.xml.in.h:137
+msgid "Utilities"
 msgstr "Pripomočki"
 
-#: ../data/toc.xml.in.h:32
-msgid "Variety of other applications"
-msgstr "Drugi programi"
+#: ../data/toc.xml.in.h:138
+msgid "Utilities to help you get work done"
+msgstr "Pripomočki za izvajanje nalog"
 
-#: ../data/toc.xml.in.h:33
+#: ../data/toc.xml.in.h:139
+msgid "VectorGraphics"
+msgstr "VektorskaGrafika"
+
+#: ../data/toc.xml.in.h:140
+msgid "Video"
+msgstr "Video"
+
+#: ../data/toc.xml.in.h:141
+msgid "VideoConference"
+msgstr "VideoKonferenca"
+
+#: ../data/toc.xml.in.h:142
+msgid "Viewer"
+msgstr "Pregledovalnik"
+
+#: ../data/toc.xml.in.h:143
+msgid "WebBrowser"
+msgstr "Brskalnik"
+
+#: ../data/toc.xml.in.h:144
+msgid "WebDevelopment"
+msgstr "Razvoj Spletišča"
+
+#: ../data/toc.xml.in.h:145
 msgid "Welcome to the GNOME Help Browser"
 msgstr "Dobrodošli v GNOME brskalniku pomoči"
 
-#: ../data/toc.xml.in.h:34
-msgid "X Applications"
-msgstr "X programi"
+#: ../data/toc.xml.in.h:146
+msgid "WordProcessor"
+msgstr "Pisarniški urejevalnik besedil"
 
 #: ../data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
@@ -570,8 +1017,8 @@ msgstr "Odseki dokumentov"
 #: ../src/yelp-info.c:337
 #: ../src/yelp-man.c:292
 #: ../src/yelp-man.c:387
-#: ../src/yelp-toc.c:266
-#: ../src/yelp-toc.c:364
+#: ../src/yelp-toc.c:265
+#: ../src/yelp-toc.c:363
 msgid "Page not found"
 msgstr "Strani ni mogoče najti"
 
@@ -612,7 +1059,7 @@ msgstr "Dokument '%s' ne obstaja."
 #: ../src/yelp-docbook.c:435
 #: ../src/yelp-info.c:393
 #: ../src/yelp-man.c:459
-#: ../src/yelp-toc.c:435
+#: ../src/yelp-toc.c:433
 msgid "Could not parse file"
 msgstr "Ni mogoče razčleniti datoteke"
 
@@ -697,11 +1144,6 @@ msgstr "Tiskanje s tem tiskalnikom ni podprto"
 msgid "Printer %s does not support postscript printing."
 msgstr "Tiskalnik %s ne podpira postscript tiskanja."
 
-#: ../src/yelp-print.c:337
-#: ../src/yelp-print.c:364
-msgid "Printing"
-msgstr "Tiskanje"
-
 #: ../src/yelp-print.c:366
 msgid "Waiting to print"
 msgstr "Čakanje na tiskanje"
@@ -715,20 +1157,20 @@ msgstr "Med tiskanjem je prišlo do napake"
 msgid "It was not possible to print your document: %s"
 msgstr "Dokumenta ni bilo mogoče natisniti: %s"
 
-#: ../src/yelp-search-parser.c:67
+#: ../src/yelp-search-parser.c:68
 msgid "the GNOME Support Forums"
 msgstr "GNOME Podporni Forumi"
 
-#: ../src/yelp-search-parser.c:276
+#: ../src/yelp-search-parser.c:277
 #, c-format
 msgid "No results for \"%s\""
 msgstr "Ni zadetkov za \"%s\""
 
-#: ../src/yelp-search-parser.c:277
+#: ../src/yelp-search-parser.c:278
 msgid "Try using different words to describe the problem you're having or the topic you want help with."
 msgstr "Poskusite uporabiti drugačne besede za opis vašega problema ali teme, za katero potrebujete pomoč."
 
-#: ../src/yelp-search-parser.c:280
+#: ../src/yelp-search-parser.c:281
 #, c-format
 msgid "Search results for \"%s\""
 msgstr "Iskalni zadetki za \"%s\""
@@ -738,7 +1180,7 @@ msgstr "Iskalni zadetki za \"%s\""
 #. * The %s is used to indicate where the name of the site (linked)
 #. * should be.  This is done in the XSLT
 #.
-#: ../src/yelp-search-parser.c:294
+#: ../src/yelp-search-parser.c:295
 #, c-format
 msgid "Repeat the search online at %s"
 msgstr "Ponovi iskanje na mreži %s"
@@ -751,7 +1193,7 @@ msgstr "Ponovi iskanje na mreži %s"
 #. * "how do I", and words for functional states like "not",
 #. * "work", and "broken".
 #.
-#: ../src/yelp-search-parser.c:864
+#: ../src/yelp-search-parser.c:865
 msgid "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:where:who:will:with:won't:wont:why:work:working:works"
 msgstr "da:od:ne:k:kot:h:o:in:ali:to:tisto:tisti:tista"
 
@@ -763,7 +1205,7 @@ msgstr "da:od:ne:k:kot:h:o:in:ali:to:tisto:tisti:tista"
 #. * E.g. if the common prefix is re then the string would be
 #. * "re:"
 #.
-#: ../src/yelp-search-parser.c:880
+#: ../src/yelp-search-parser.c:881
 msgid "re"
 msgstr "NULL"
 
@@ -774,7 +1216,7 @@ msgstr "NULL"
 #. * please use the strig NULL.  If there is only 1, please
 #. * add a colon at the end of the list
 #.
-#: ../src/yelp-search-parser.c:889
+#: ../src/yelp-search-parser.c:890
 msgid "ers:er:ing:es:s:'s"
 msgstr "NULL"
 
@@ -795,16 +1237,16 @@ msgstr "Ni mogoče izvesti iskanja"
 msgid "The search processor returned invalid results"
 msgstr "Iskalnik je vrnil neveljavne rezultate"
 
-#: ../src/yelp-toc.c:267
+#: ../src/yelp-toc.c:266
 #, c-format
 msgid "The page %s was not found in the TOC."
 msgstr "Strani %s ni mogoče najti v kazalu."
 
-#: ../src/yelp-toc.c:365
+#: ../src/yelp-toc.c:364
 msgid "The requested page was not found in the TOC."
 msgstr "Zahtevane stran ni mogoče najti v kazalu"
 
-#: ../src/yelp-toc.c:436
+#: ../src/yelp-toc.c:434
 msgid "The TOC file could not be parsed because it is not a well-formed XML document."
 msgstr "Datoteke TOC ni mogoče razčleniti, ker ni pravilno oblikovana v formatu XML."
 
@@ -1053,7 +1495,7 @@ msgstr "Datoteke ‘%s’ ni mogoče prebrati. Datoteka ne obstaja ali pa nimate
 #. * will show up in the "about" box
 #: ../src/yelp-window.c:2401
 msgid "translator-credits"
-msgstr "Matej Urbančič <matej.urban@gmail.com>"
+msgstr "Matej Urbančič <mateju@svn.gnome.org>"
 
 #: ../src/yelp-window.c:2404
 msgid "Yelp"
