--- a/po/ko.po
+++ b/po/ko.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-09-22 16:24+0900\n"
-"PO-Revision-Date: 2007-09-22 16:26+0900\n"
+"POT-Creation-Date: 2007-12-06 16:18+0900\n"
+"PO-Revision-Date: 2007-12-06 16:50+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr-hackers@lists.kldp.net>\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "설정 파일"
 msgid "Curses Functions"
 msgstr "curses 함수"
 
-#: ../data/man.xml.in.h:5
+#: ../data/man.xml.in.h:5 ../data/toc.xml.in.h:36
 msgid "Development"
 msgstr "개발"
 
@@ -47,7 +47,7 @@ msgstr "개발"
 msgid "FORTRAN Functions"
 msgstr "포트란 함수"
 
-#: ../data/man.xml.in.h:7 ../data/toc.xml.in.h:15
+#: ../data/man.xml.in.h:7 ../data/toc.xml.in.h:56
 msgid "Games"
 msgstr "게임"
 
@@ -280,136 +280,582 @@ msgid "X11 Overviews"
 msgstr "X11 전체"
 
 #: ../data/toc.xml.in.h:1
+msgid "2DGraphics"
+msgstr "2D 그래픽"
+
+#: ../data/toc.xml.in.h:2
+msgid "3DGraphics"
+msgstr "3D 그래픽"
+
+#: ../data/toc.xml.in.h:3
 msgid "Accessibility"
 msgstr "접근성"
 
-#: ../data/toc.xml.in.h:2
-msgid "Accessories"
-msgstr "보조 프로그램"
-
-#: ../data/toc.xml.in.h:3
-msgid "Applications for fun"
-msgstr "재미를 위한 응용프로그램"
-
 #: ../data/toc.xml.in.h:4
-msgid "Applications for manipulating or viewing graphics"
-msgstr "그래픽을 보거나 조작하는 응용프로그램"
+msgid "Action Games"
+msgstr "액션 게임"
 
 #: ../data/toc.xml.in.h:5
-msgid "Applications for word processing and other office tasks"
-msgstr "워드프로세스 및 기타 업무용 응용프로그램"
+msgid "Adventure Games"
+msgstr "어드벤쳐 게임"
 
 #: ../data/toc.xml.in.h:6
-msgid "Applications related to X Windows"
-msgstr "X Window 관련 응용프로그램"
+msgid "Amusement"
+msgstr "재미"
 
 #: ../data/toc.xml.in.h:7
-msgid "Applications related to multimedia"
-msgstr "멀티미디어 관련 응용프로그램"
+msgid "Applications for viewing and manipulating graphics"
+msgstr "그래픽을 보고 조작하는 응용 프로그램"
 
 #: ../data/toc.xml.in.h:8
-msgid "Applications related to software development"
-msgstr "소프트웨어 개발 관련 응용프로그램"
+msgid "Applications related to audio and video"
+msgstr "오디오 비디오 관련 응용 프로그램"
 
 #: ../data/toc.xml.in.h:9
-msgid "Applications related to the internet"
-msgstr "인터넷 관련 응용프로그램"
+msgid "Applications that teach or aid in learning"
+msgstr "가르치거나 배우는 데 도움이 되는 응용프로그램"
 
 #: ../data/toc.xml.in.h:10
-msgid "Applications specific to the panel"
-msgstr "패널 관련 응용프로그램"
+msgid "Arcade Games"
+msgstr "아케이드 게임"
 
 #: ../data/toc.xml.in.h:11
-msgid "Applications that support assistive technologies"
-msgstr "접근성 기술을 지원하는 응용프로그램"
+msgid "Archiving"
+msgstr "압축 파일"
 
 #: ../data/toc.xml.in.h:12
+msgid "Art"
+msgstr "예술"
+
+#: ../data/toc.xml.in.h:13
+msgid "ArtificialIntelligence"
+msgstr "인공지능"
+
+#: ../data/toc.xml.in.h:14
+msgid "Astronomy"
+msgstr "천문학"
+
+#: ../data/toc.xml.in.h:15
+msgid "AudioVideoEditing"
+msgstr "오디오 비디오 편집"
+
+#: ../data/toc.xml.in.h:16
+msgid "Biology"
+msgstr "생물학"
+
+#: ../data/toc.xml.in.h:17
+msgid "Blocks Games"
+msgstr "블록 게임"
+
+#: ../data/toc.xml.in.h:18
+msgid "Board Games"
+msgstr "보드 게임"
+
+#: ../data/toc.xml.in.h:19
+msgid "Building"
+msgstr "건축"
+
+#: ../data/toc.xml.in.h:20
+msgid "Calculator"
+msgstr "계산기"
+
+#: ../data/toc.xml.in.h:21
+msgid "Calendar"
+msgstr "달력"
+
+#: ../data/toc.xml.in.h:22
+msgid "Card Games"
+msgstr "카드 게임"
+
+#: ../data/toc.xml.in.h:23
+msgid "Chart"
+msgstr "차트"
+
+#: ../data/toc.xml.in.h:24
+msgid "Chat"
+msgstr "대화"
+
+#: ../data/toc.xml.in.h:25
+msgid "Chemistry"
+msgstr "화학"
+
+#: ../data/toc.xml.in.h:26
+msgid "Clock"
+msgstr "시계"
+
+#: ../data/toc.xml.in.h:27
+msgid "Compression"
+msgstr "압축"
+
+#: ../data/toc.xml.in.h:28
+msgid "ComputerScience"
+msgstr "컴퓨터과학"
+
+#: ../data/toc.xml.in.h:29
+msgid "Construction"
+msgstr "건설"
+
+#: ../data/toc.xml.in.h:30
+msgid "ContactManagement"
+msgstr "연락처 관리"
+
+#: ../data/toc.xml.in.h:31
+msgid "DataVisualization"
+msgstr "데이터 시각화"
+
+#: ../data/toc.xml.in.h:32
+msgid "Database"
+msgstr "데이터베이스"
+
+#: ../data/toc.xml.in.h:33
+msgid "Debugger"
+msgstr "디버거"
+
+#: ../data/toc.xml.in.h:34
 msgid "Desktop"
 msgstr "데스크탑"
 
-#: ../data/toc.xml.in.h:13
-msgid "Documents specific to the KDE Desktop Environment"
-msgstr "KDE 데스크탑 환경 전용 문서"
+#: ../data/toc.xml.in.h:35
+msgid "DesktopSettings"
+msgstr "데스크탑 설정"
 
-#: ../data/toc.xml.in.h:14
+#: ../data/toc.xml.in.h:37
+msgid "Dialup"
+msgstr "전화접속"
+
+#: ../data/toc.xml.in.h:38
+msgid "Dictionary"
+msgstr "사전"
+
+#: ../data/toc.xml.in.h:39
+msgid "DiscBurning"
+msgstr "디스크 굽기"
+
+#: ../data/toc.xml.in.h:40
+msgid "Economy"
+msgstr "경제학"
+
+#: ../data/toc.xml.in.h:41
 msgid "Education"
 msgstr "교육"
 
-#: ../data/toc.xml.in.h:16
+#: ../data/toc.xml.in.h:42
+msgid "Electricity"
+msgstr "전기"
+
+#: ../data/toc.xml.in.h:43
+msgid "Electronics"
+msgstr "전자"
+
+#: ../data/toc.xml.in.h:44
+msgid "Email"
+msgstr "전자메일"
+
+#: ../data/toc.xml.in.h:45
+msgid "Emulator"
+msgstr "에뮬레이터"
+
+#: ../data/toc.xml.in.h:46
+msgid "Engineering"
+msgstr "공학"
+
+#: ../data/toc.xml.in.h:47
+msgid "FileManager"
+msgstr "파일 관리자"
+
+#: ../data/toc.xml.in.h:48
+msgid "FileTools"
+msgstr "파일 도구"
+
+#: ../data/toc.xml.in.h:49
+msgid "FileTransfer"
+msgstr "파일 전송"
+
+#: ../data/toc.xml.in.h:50
+msgid "Filesystem"
+msgstr "파일 시스템"
+
+#: ../data/toc.xml.in.h:51
+msgid "Finance"
+msgstr "재무"
+
+#: ../data/toc.xml.in.h:52
+msgid "FlowChart"
+msgstr "플로우 차트"
+
+#: ../data/toc.xml.in.h:53
+msgid "GNOME Applications"
+msgstr "그놈 프로그램"
+
+#: ../data/toc.xml.in.h:54
+msgid "GTK"
+msgstr "GTK"
+
+#: ../data/toc.xml.in.h:55
+msgid "GUIDesigner"
+msgstr "GUI 설계"
+
+#: ../data/toc.xml.in.h:57
+msgid "Generic applications for the GNOME environment"
+msgstr "그놈 환경의 일반 응용 프로그램"
+
+#: ../data/toc.xml.in.h:58
+msgid "Generic applications for the KDE environment"
+msgstr "KDE 환경의 일반 응용 프로그램"
+
+#: ../data/toc.xml.in.h:59
+msgid "Geography"
+msgstr "지리학"
+
+#: ../data/toc.xml.in.h:60
+msgid "Geology"
+msgstr "지질학"
+
+#: ../data/toc.xml.in.h:61
+msgid "Geoscience"
+msgstr "지구과학"
+
+#: ../data/toc.xml.in.h:62
 msgid "Graphics"
 msgstr "그래픽스"
 
-#: ../data/toc.xml.in.h:17
+#: ../data/toc.xml.in.h:63
+msgid "Guides and manuals for applications that connect to the outside world"
+msgstr "외부 세계와 연결하는 응용 프로그램에 대한 안내서 및 설명서"
+
+#: ../data/toc.xml.in.h:64
+msgid "Guides for getting involved in development"
+msgstr "개발 작업 참여에 대한 안내서"
+
+#: ../data/toc.xml.in.h:65
+msgid "HamRadio"
+msgstr "햄 라디오"
+
+#: ../data/toc.xml.in.h:66
+msgid "HardwareSettings"
+msgstr "하드웨어 설정"
+
+#: ../data/toc.xml.in.h:67
+msgid "Have some fun"
+msgstr "재미와 놀이"
+
+#: ../data/toc.xml.in.h:68
+msgid "History"
+msgstr "역사"
+
+#: ../data/toc.xml.in.h:69
+msgid "IDE"
+msgstr "IDE"
+
+#: ../data/toc.xml.in.h:70
+msgid "IRCClient"
+msgstr "IRC 클라이언트"
+
+#: ../data/toc.xml.in.h:71
+msgid "ImageProcessing"
+msgstr "이미지 처리"
+
+#: ../data/toc.xml.in.h:72
+msgid "InstantMessaging"
+msgstr "인스턴스 메세지"
+
+#: ../data/toc.xml.in.h:73
 msgid "Internet"
 msgstr "인터넷"
 
-#: ../data/toc.xml.in.h:18
-msgid "KDE"
-msgstr "KDE"
+#: ../data/toc.xml.in.h:74
+msgid "Java"
+msgstr "자바"
 
-#: ../data/toc.xml.in.h:19
-msgid "Learning applications"
-msgstr "학습 프로그램"
+#: ../data/toc.xml.in.h:75
+msgid "KDE Applications"
+msgstr "KDE 프로그램"
 
-#: ../data/toc.xml.in.h:20
-msgid "Miscellaneous documents"
+#: ../data/toc.xml.in.h:76
+msgid "Kids Games"
+msgstr "어린이 게임"
+
+#: ../data/toc.xml.in.h:77
+msgid ""
+"Learn more about making you're system more accessible for a range of "
+"disabilities"
+msgstr "여러가지 장애에 대해 접근성을 높이는 방법 배우기"
+
+#: ../data/toc.xml.in.h:78
+msgid "Licences"
+msgstr "라이센스"
+
+#: ../data/toc.xml.in.h:79
+msgid "Literature"
+msgstr "문학"
+
+#: ../data/toc.xml.in.h:80
+msgid "Logic Games"
+msgstr "논리 게임"
+
+#: ../data/toc.xml.in.h:81
+msgid "Math"
+msgstr "수학"
+
+#: ../data/toc.xml.in.h:82
+msgid "MedicalSoftware"
+msgstr "의학 소프트웨어"
+
+#: ../data/toc.xml.in.h:83
+msgid "Midi"
+msgstr "미디"
+
+#: ../data/toc.xml.in.h:84
+msgid "Miscellaneous Documentation"
 msgstr "잡다한 문서"
 
-#: ../data/toc.xml.in.h:21
-msgid "Office"
-msgstr "사무용"
+#: ../data/toc.xml.in.h:85
+msgid "Mixer"
+msgstr "믹서"
 
-#: ../data/toc.xml.in.h:22
-msgid "Other Applications"
-msgstr "기타 응용프로그램"
+#: ../data/toc.xml.in.h:86
+msgid "Monitor"
+msgstr "감시"
 
-#: ../data/toc.xml.in.h:23
+#: ../data/toc.xml.in.h:87
+msgid "Motif"
+msgstr "모티프"
+
+#: ../data/toc.xml.in.h:88
+msgid "Music"
+msgstr "음악"
+
+#: ../data/toc.xml.in.h:89
+msgid "News"
+msgstr "뉴스"
+
+#: ../data/toc.xml.in.h:90
+msgid "NumericalAnalysis"
+msgstr "수치해석"
+
+#: ../data/toc.xml.in.h:91
+msgid "OCR"
+msgstr "광학 문자 판독"
+
+#: ../data/toc.xml.in.h:92
+msgid "Office Applications"
+msgstr "사무용 프로그램"
+
+#: ../data/toc.xml.in.h:93
+msgid "Office applications"
+msgstr "사무용 프로그램"
+
+#: ../data/toc.xml.in.h:94
 msgid "Other Documentation"
 msgstr "기타 문서"
 
-#: ../data/toc.xml.in.h:24
-msgid "Panel Applets"
-msgstr "패널 애플릿"
+#: ../data/toc.xml.in.h:95
+msgid "P2P"
+msgstr "P2P"
 
-#: ../data/toc.xml.in.h:25
-msgid "Programming"
-msgstr "프로그래밍"
+#: ../data/toc.xml.in.h:96
+msgid "PDA"
+msgstr "PDA"
 
-#: ../data/toc.xml.in.h:26
-msgid "Scientific"
-msgstr "과학 프로그램"
+#: ../data/toc.xml.in.h:97
+msgid "PackageManager"
+msgstr "패키지 관리자"
 
-#: ../data/toc.xml.in.h:27
-msgid "Scientific Applications."
-msgstr "과학 응용프로그램."
+#: ../data/toc.xml.in.h:98
+msgid "ParallelComputing"
+msgstr "병렬 컴퓨팅"
 
-#: ../data/toc.xml.in.h:28
+#: ../data/toc.xml.in.h:99
+msgid "Photography"
+msgstr "사진 촬영"
+
+#: ../data/toc.xml.in.h:100
+msgid "Physics"
+msgstr "물리학"
+
+#: ../data/toc.xml.in.h:101
+msgid "Player"
+msgstr "플레이어"
+
+#: ../data/toc.xml.in.h:102
+msgid "Presentation"
+msgstr "프리젠테이션"
+
+#: ../data/toc.xml.in.h:103 ../src/yelp-print.c:337 ../src/yelp-print.c:364
+msgid "Printing"
+msgstr "인쇄중"
+
+#: ../data/toc.xml.in.h:104
+msgid "Profiling"
+msgstr "프로파일"
+
+#: ../data/toc.xml.in.h:105
+msgid "ProjectManagement"
+msgstr "프로젝트 관리"
+
+#: ../data/toc.xml.in.h:106
+msgid "Publishing"
+msgstr "출판"
+
+#: ../data/toc.xml.in.h:107
+msgid "Qt"
+msgstr "Qt"
+
+#: ../data/toc.xml.in.h:108
+msgid "RasterGraphics"
+msgstr "래스터 그래픽"
+
+#: ../data/toc.xml.in.h:109
+msgid "Recorder"
+msgstr "레코더"
+
+#: ../data/toc.xml.in.h:110
+msgid "RemoteAccess"
+msgstr "원격 연결"
+
+#: ../data/toc.xml.in.h:111
+msgid "RevisionControl"
+msgstr "리비전 관리"
+
+#: ../data/toc.xml.in.h:112
+msgid "Robotics"
+msgstr "로보틱스"
+
+#: ../data/toc.xml.in.h:113
+msgid "Role Playing Games"
+msgstr "롤플레잉 게임"
+
+#: ../data/toc.xml.in.h:114
+msgid "Scanning"
+msgstr "스캔"
+
+#: ../data/toc.xml.in.h:115
+msgid "Science"
+msgstr "과학"
+
+#: ../data/toc.xml.in.h:116
+msgid "Security"
+msgstr "보안"
+
+#: ../data/toc.xml.in.h:117
+msgid "Sequencer"
+msgstr "시퀀서"
+
+#: ../data/toc.xml.in.h:118
+msgid "Settings"
+msgstr "설정"
+
+#: ../data/toc.xml.in.h:119
+msgid "Settings users can manipulate to make their environment more pleasent"
+msgstr "자기에 맞는 환경으로 사용자가 조작할 수 있는 설정"
+
+#: ../data/toc.xml.in.h:120
+msgid "Simulation Games"
+msgstr "시뮬레이션 게임"
+
+#: ../data/toc.xml.in.h:121
+msgid "Sound"
+msgstr "사운드"
+
+#: ../data/toc.xml.in.h:122
 msgid "Sound &amp; Video"
 msgstr "사운드와 비디오"
 
-#: ../data/toc.xml.in.h:29
-msgid "System Tools"
-msgstr "시스템 도구"
+#: ../data/toc.xml.in.h:123
+msgid "Sports"
+msgstr "스포츠"
 
-#: ../data/toc.xml.in.h:30
-msgid "Utilities to manage your computer"
-msgstr "컴퓨터를 관리하는 유틸리티"
+#: ../data/toc.xml.in.h:124
+msgid "Sports Games"
+msgstr "스포츠 게임"
 
-#: ../data/toc.xml.in.h:31
-msgid "Utility applications"
-msgstr "유틸리티 응용프로그램"
+#: ../data/toc.xml.in.h:125
+msgid "Spreadsheet"
+msgstr "스프레드시트"
 
-#: ../data/toc.xml.in.h:32
-msgid "Variety of other applications"
-msgstr "여러가지 기타 응용프로그램"
+#: ../data/toc.xml.in.h:126
+msgid "Strategy Games"
+msgstr "전략 게임"
 
-#: ../data/toc.xml.in.h:33
+#: ../data/toc.xml.in.h:127
+msgid "System"
+msgstr "시스템"
+
+#: ../data/toc.xml.in.h:128
+msgid "TV"
+msgstr "TV"
+
+#: ../data/toc.xml.in.h:129
+msgid "Telephony"
+msgstr "전화"
+
+#: ../data/toc.xml.in.h:130
+msgid "TelephonyTools"
+msgstr "전화 도구"
+
+#: ../data/toc.xml.in.h:131
+msgid "TerminalEmulator"
+msgstr "터미널 에뮬레이터"
+
+#: ../data/toc.xml.in.h:132
+msgid "Text Tools"
+msgstr "텍스트 도구"
+
+#: ../data/toc.xml.in.h:133
+msgid "TextEditor"
+msgstr "텍스트 편집기"
+
+#: ../data/toc.xml.in.h:134
+msgid "Tools to help you manage you're computer"
+msgstr "컴퓨터를 관리하는 데 도움이 되는 도구"
+
+#: ../data/toc.xml.in.h:135
+msgid "Translation"
+msgstr "번역"
+
+#: ../data/toc.xml.in.h:136
+msgid "Tuner"
+msgstr "튜너"
+
+#: ../data/toc.xml.in.h:137
+msgid "Utilities"
+msgstr "유틸리티"
+
+#: ../data/toc.xml.in.h:138
+msgid "Utilities to help you get work done"
+msgstr "각종 작업을 하는 데 도움이 되는 유틸리티"
+
+#: ../data/toc.xml.in.h:139
+msgid "VectorGraphics"
+msgstr "벡터 그래픽"
+
+#: ../data/toc.xml.in.h:140
+msgid "Video"
+msgstr "비디오"
+
+#: ../data/toc.xml.in.h:141
+msgid "VideoConference"
+msgstr "비디오 회의"
+
+#: ../data/toc.xml.in.h:142
+msgid "Viewer"
+msgstr "보기 프로그램"
+
+#: ../data/toc.xml.in.h:143
+msgid "WebBrowser"
+msgstr "웹 브라우저"
+
+#: ../data/toc.xml.in.h:144
+msgid "WebDevelopment"
+msgstr "웹 개발"
+
+#: ../data/toc.xml.in.h:145
 msgid "Welcome to the GNOME Help Browser"
 msgstr "그놈 도움말 브라우저입니다"
 
-#: ../data/toc.xml.in.h:34
-msgid "X Applications"
-msgstr "X 프로그램"
+#: ../data/toc.xml.in.h:146
+msgid "WordProcessor"
+msgstr "워드 프로세서"
 
 #: ../data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
@@ -556,7 +1002,7 @@ msgstr "문서 섹션"
 #: ../src/yelp-db-print.c:258 ../src/yelp-db-print.c:350
 #: ../src/yelp-docbook.c:275 ../src/yelp-docbook.c:367 ../src/yelp-info.c:242
 #: ../src/yelp-info.c:337 ../src/yelp-man.c:292 ../src/yelp-man.c:387
-#: ../src/yelp-toc.c:266 ../src/yelp-toc.c:364
+#: ../src/yelp-toc.c:265 ../src/yelp-toc.c:363
 msgid "Page not found"
 msgstr "페이지가 없습니다"
 
@@ -585,7 +1031,7 @@ msgstr "파일 ‘%s’ d(이)가 없습니다."
 
 #: ../src/yelp-db-print.c:406 ../src/yelp-db-print.c:418
 #: ../src/yelp-docbook.c:423 ../src/yelp-docbook.c:435 ../src/yelp-info.c:393
-#: ../src/yelp-man.c:459 ../src/yelp-toc.c:435
+#: ../src/yelp-man.c:459 ../src/yelp-toc.c:433
 msgid "Could not parse file"
 msgstr "파일을 분석할 수 없습니다"
 
@@ -677,10 +1123,6 @@ msgstr "이 프린터가 인쇄를 지원하지 않습니다."
 msgid "Printer %s does not support postscript printing."
 msgstr "%s 프린터가 포스트스크립트를 지원하지 않습니다."
 
-#: ../src/yelp-print.c:337 ../src/yelp-print.c:364
-msgid "Printing"
-msgstr "인쇄중"
-
 #: ../src/yelp-print.c:366
 msgid "Waiting to print"
 msgstr "인쇄 대기 중"
@@ -694,23 +1136,23 @@ msgstr "인쇄중 오류가 생겼습니다"
 msgid "It was not possible to print your document: %s"
 msgstr "문서를 인쇄할 수 없습니다: %s"
 
-#: ../src/yelp-search-parser.c:67
+#: ../src/yelp-search-parser.c:68
 msgid "the GNOME Support Forums"
 msgstr "그놈 지원 포럼"
 
-#: ../src/yelp-search-parser.c:276
+#: ../src/yelp-search-parser.c:277
 #, c-format
 msgid "No results for \"%s\""
 msgstr "\"%s\"에 대한 결과가 없습니다"
 
-#: ../src/yelp-search-parser.c:277
+#: ../src/yelp-search-parser.c:278
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
 msgstr ""
 "문제가 되는 사항이나 도움이 필요한 주제에 대해 다른 단어를 사용해 보십시오."
 
-#: ../src/yelp-search-parser.c:280
+#: ../src/yelp-search-parser.c:281
 #, c-format
 msgid "Search results for \"%s\""
 msgstr "\"%s\"에 대한 찾기 결과"
@@ -720,7 +1162,7 @@ msgstr "\"%s\"에 대한 찾기 결과"
 #. * The %s is used to indicate where the name of the site (linked)
 #. * should be.  This is done in the XSLT
 #.
-#: ../src/yelp-search-parser.c:294
+#: ../src/yelp-search-parser.c:295
 #, c-format
 msgid "Repeat the search online at %s"
 msgstr "온라인으로 %s 사이트에서 다시 찾기"
@@ -734,7 +1176,7 @@ msgstr "온라인으로 %s 사이트에서 다시 찾기"
 #. * "how do I", and words for functional states like "not",
 #. * "work", and "broken".
 #.
-#: ../src/yelp-search-parser.c:864
+#: ../src/yelp-search-parser.c:865
 msgid ""
 "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:"
 "doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:"
@@ -751,7 +1193,7 @@ msgstr "NULL"
 #. * E.g. if the common prefix is re then the string would be
 #. * "re:"
 #.
-#: ../src/yelp-search-parser.c:880
+#: ../src/yelp-search-parser.c:881
 msgid "re"
 msgstr "NULL"
 
@@ -763,7 +1205,7 @@ msgstr "NULL"
 #. * please use the strig NULL.  If there is only 1, please
 #. * add a colon at the end of the list
 #.
-#: ../src/yelp-search-parser.c:889
+#: ../src/yelp-search-parser.c:890
 msgid "ers:er:ing:es:s:'s"
 msgstr "NULL"
 
@@ -784,16 +1226,16 @@ msgstr "검색을 진행할 수 없습니다"
 msgid "The search processor returned invalid results"
 msgstr "검색 프로세서가 잘못된 결과값은 반환하였습니다"
 
-#: ../src/yelp-toc.c:267
+#: ../src/yelp-toc.c:266
 #, c-format
 msgid "The page %s was not found in the TOC."
 msgstr "%s 페이지를 차례에서 찾을 수 없습니다."
 
-#: ../src/yelp-toc.c:365
+#: ../src/yelp-toc.c:364
 msgid "The requested page was not found in the TOC."
 msgstr "요청한 페이지를 차례에서 찾을 수 없습니다."
 
-#: ../src/yelp-toc.c:436
+#: ../src/yelp-toc.c:434
 msgid ""
 "The TOC file could not be parsed because it is not a well-formed XML "
 "document."
@@ -850,11 +1292,11 @@ msgstr "새 창(_N)"
 
 #: ../src/yelp-window.c:310
 msgid "Print This Document ..."
-msgstr "이 문서를 인쇄합니다..."
+msgstr "이 문서 인쇄..."
 
 #: ../src/yelp-window.c:315
 msgid "Print This Page ..."
-msgstr "이 페이지를 인쇄합니다..."
+msgstr "이 페이지 인쇄..."
 
 #: ../src/yelp-window.c:320
 msgid "About This Document"
@@ -970,7 +1412,7 @@ msgstr "정보(_A)"
 
 #: ../src/yelp-window.c:446
 msgid "Copy _Email Address"
-msgstr "바로 가기 주소 복사(_E)"
+msgstr "전자메일 주소 복사(_E)"
 
 #: ../src/yelp-window.c:495
 msgid "Help Browser"
@@ -1054,3 +1496,45 @@ msgstr "그놈 데스크탑 문서 보기 프로그램."
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "그놈에서 도움말을 봅니다"
+
+#~ msgid "Accessories"
+#~ msgstr "보조 프로그램"
+
+#~ msgid "Applications for fun"
+#~ msgstr "재미를 위한 응용프로그램"
+
+#~ msgid "Applications for word processing and other office tasks"
+#~ msgstr "워드프로세스 및 기타 업무용 응용프로그램"
+
+#~ msgid "Applications related to multimedia"
+#~ msgstr "멀티미디어 관련 응용프로그램"
+
+#~ msgid "Applications related to software development"
+#~ msgstr "소프트웨어 개발 관련 응용프로그램"
+
+#~ msgid "Applications specific to the panel"
+#~ msgstr "패널 관련 응용프로그램"
+
+#~ msgid "Applications that support assistive technologies"
+#~ msgstr "접근성 기술을 지원하는 응용프로그램"
+
+#~ msgid "Learning applications"
+#~ msgstr "학습 프로그램"
+
+#~ msgid "Office"
+#~ msgstr "사무용"
+
+#~ msgid "Panel Applets"
+#~ msgstr "패널 애플릿"
+
+#~ msgid "Programming"
+#~ msgstr "프로그래밍"
+
+#~ msgid "Scientific Applications."
+#~ msgstr "과학 응용프로그램."
+
+#~ msgid "Utility applications"
+#~ msgstr "유틸리티 응용프로그램"
+
+#~ msgid "Variety of other applications"
+#~ msgstr "여러가지 기타 응용프로그램"
