Fixed translation of "remove".
2007-12-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Fixed translation of "remove".

svn path=/trunk/; revision=3003

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-06 04:00+0100\n"
-"PO-Revision-Date: 2007-09-06 18:54-0500\n"
+"PO-Revision-Date: 2007-12-08 11:48-0200\n"
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
@@ -538,7 +538,7 @@ msgstr "Renomear Marcador"
 
 #: ../src/yelp-bookmarks.c:158
 msgid "Remove Bookmark"
-msgstr "Apagar Marcador"
+msgstr "Remover Marcador"
 
 #: ../src/yelp-bookmarks.c:315
 #, c-format
